Crud using beego v2 version
